--- a/.tekton/kserve-router-28-pull-request.yaml
+++ b/.tekton/kserve-router-28-pull-request.yaml
@@ -8,7 +8,7 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "rhoai-2.8" && (!".tekton/*.*".pathChanged() || ".tekton/kserve-router-28-pull-request.yaml".pathChanged()) ||  && !"config/overlays/odh/params.env".pathChanged()
+      == "rhoai-2.8" && (!".tekton/*.*".pathChanged() || ".tekton/kserve-router-28-pull-request.yaml".pathChanged()) && !"config/overlays/odh/params.env".pathChanged()
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: kserve-router
