--- a/.tekton/kserve-storage-initializer-28-pull-request.yaml
+++ b/.tekton/kserve-storage-initializer-28-pull-request.yaml
@@ -8,7 +8,7 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "rhoai-2.8" && ( "python/***".pathChanged() || ".tekton/kserve-storage-initializer-28-pull-request.yaml".pathChanged()
+      == "rhoai-2.8" && !".github/*.*".pathChanged() && ( "python/***".pathChanged() || ".tekton/kserve-storage-initializer-28-pull-request.yaml".pathChanged()
       ) && (!".tekton/*.*".pathChanged() || ".tekton/kserve-storage-initializer-28-pull-request.yaml".pathChanged()) && !"config/overlays/odh/params.env".pathChanged()
   creationTimestamp: null
   labels:
