--- a/.tekton/kserve-storage-initializer-28-push.yaml
+++ b/.tekton/kserve-storage-initializer-28-push.yaml
@@ -6,6 +6,7 @@ metadata:
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
+    build.appstudio.openshift.io/build-nudge-files: ".*.env, .*.json"
     pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
       == "rhoai-2.8" && (!".tekton/*.*".pathChanged() || ".tekton/kserve-storage-initializer-28-push.yaml".pathChanged()) && !"config/overlays/odh/params.env".pathChanged()
   creationTimestamp: null
