updating instant merger

--- a/.github/workflows/instant-merge.yaml
+++ b/.github/workflows/instant-merge.yaml
@@ -18,8 +18,16 @@ jobs:
   instant-merge:
     runs-on: ubuntu-latest
     steps:
+      - id: poc
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: |
+          echo "from rhoai-2.8"
+          echo ${{ github.event.sender.id }}
+          echo ${{ github.event.sender.login }}
+          echo ${{ github.event.pull_request.title }}
       - name: instant-merge
-        if: ${{ github.event.sender.login == 'red-hat-konflux' && startsWith(github.event.pull_request.title, 'Update kserve-') }}
+        if: ${{ github.event.sender.login == 'red-hat-konflux[bot]' && startsWith(github.event.pull_request.title, 'Update kserve-') }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
