updating base image 2.8

--- a/.tekton/kserve-storage-initializer-28-pull-request.yaml
+++ b/.tekton/kserve-storage-initializer-28-pull-request.yaml
@@ -239,6 +239,10 @@ spec:
         value: $(params.output-image)
       - name: BASE_IMAGES
         value: $(tasks.build-container.results.BASE_IMAGES_DIGESTS)
+      - name: IMAGE_URL
+        value: $(tasks.build-container.results.IMAGE_URL)
+      - name: IMAGE_DIGEST
+        value: $(tasks.build-container.results.IMAGE_DIGEST)
       runAfter:
       - build-container
       taskRef:
