--- a/.tekton/kserve-agent-28-push.yaml
+++ b/.tekton/kserve-agent-28-push.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1
 kind: PipelineRun
 metadata:
-  #test
+  #test-change
   annotations:
     build.appstudio.openshift.io/repo: https://github.com/red-hat-data-services/kserve?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
