--- a/.tekton/kserve-storage-initializer-pull-request.yaml
+++ b/.tekton/kserve-storage-initializer-pull-request.yaml
@@ -9,7 +9,7 @@ metadata:
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: |
       event == "pull_request"
-      && target_branch == "master"
+      && target_branch == "rhoai-2.11"
       && ( "python/**".pathChanged() || ".tekton/kserve-storage-initializer-pull-request.yaml".pathChanged() )
   creationTimestamp: null
   labels:
