--- a/.tekton/kserve-storage-initializer-push.yaml
+++ b/.tekton/kserve-storage-initializer-push.yaml
@@ -8,7 +8,7 @@ metadata:
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: |
       event == "push"
-      && target_branch == "master"
+      && target_branch == "rhoai-2.11"
       && ( "python/**".pathChanged() || ".tekton/kserve-storage-initializer-push.yaml".pathChanged() )
   creationTimestamp: null
   labels:
