--- a/.tekton/kserve-storage-initializer-211-pull-request.yaml
+++ b/.tekton/kserve-storage-initializer-211-pull-request.yaml
@@ -7,9 +7,11 @@ metadata:
     build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "rhoai-2.11" && ( "./python/***".pathChanged() || ".tekton/kserve-storage-initializer-211-pull-request.yaml".pathChanged()
-      || "storage-initializer.Dockerfile".pathChanged() )
+    pipelinesascode.tekton.dev/on-cel-expression: |
+      event == "pull_request" 
+      && target_branch == "rhoai-2.11 
+      && ( "python/**".pathChanged() || ".tekton/kserve-storage-initializer-211-pull-request.yaml".pathChanged() ) 
+      && !"config/overlays/odh/params.env".pathChanged()
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: kserve-storage-initializer
