--- a/.tekton/kserve-agent-push.yaml
+++ b/.tekton/kserve-agent-push.yaml
@@ -13,7 +13,7 @@ metadata:
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: kserve-agent
-    appstudio.openshift.io/component: kserve-agent
+    appstudio.openshift.io/component: kserve-agent-hermetic-poc
     pipelines.appstudio.openshift.io/type: build
   name: kserve-agent-on-push
   namespace: rhoai-tenant
