--- a/docs/samples/explanation/alibi/alibiexplainer/pyproject.toml
+++ b/docs/samples/explanation/alibi/alibiexplainer/pyproject.toml
@@ -11,7 +11,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
-kserve = { path = "../../../../../python/kserve", extras = ["storage"], develop = true }
+kserve = { path = "../../../../../python/storage", extras = ["storage"], develop = true }
 alibi = { version = "^0.9.4", extras = ["shap", "tensorflow"] } # From 0.9.5 alibi uses BSL license
 tensorflow = ">=2.12.0,<2.14"  # the range that supports python 3.8 -- 3.11
 dill = "^0.3.6"
