--- a/python/huggingfaceserver/pyproject.toml
+++ b/python/huggingfaceserver/pyproject.toml
@@ -11,7 +11,8 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
-kserve = { path = "../kserve", extras = ["storage"], develop = true }
+storage = { path = "../storage", extras = ["storage"], develop = true }
+kserve = { path = "../kserve", develop = true }
 transformers = "~4.43.3"
 accelerate = "~0.32.0"
 torch = "~2.4.0"
