--- a/python/kserve/pyproject.toml
+++ b/python/kserve/pyproject.toml
@@ -54,6 +54,8 @@ pydantic = ">1.0,<3"
 pyyaml = "^6.0.0"
 
 # Storage dependencies. They can be opted into by apps.
+# The storage module will be migrated to its own model and removed from here on new releses,
+# please update it accordingly.
 requests = { version = "^2.20.0", optional = true }
 google-cloud-storage = { version = "^2.3.0", optional = true }
 azure-storage-blob = { version = "^12.10.0", optional = true }
@@ -63,12 +65,14 @@ boto3 = { version = "^1.21.0", optional = true }
 huggingface-hub = { version = "^0.24.5", optional = true }
 
 # Logging dependencies. They can be opted into by apps.
-asgi-logger = { version = "^0.1.0", optional = true, python = ">3.8.0,<3.11" }
+asgi-logger = { version = "^0.1.0", optional = true, python = ">3.8.0,<3.12" }
 
 # Ray dependency
 ray = { version = "~2.10.0", extras = ["serve"] }
 
 [tool.poetry.extras]
+# The storage module will be migrated to its own model and removed from here on new releses,
+# please update it accordingly.
 storage = [
     "requests",
     "google-cloud-storage",
@@ -85,6 +89,7 @@ logging = [
 ray = [
     "ray"
 ]
+
 [tool.poetry.group.test]
 optional = true
 
