--- a/python/paddleserver/pyproject.toml
+++ b/python/paddleserver/pyproject.toml
@@ -11,7 +11,8 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
-kserve = {path = "../kserve", extras = ["storage"], develop = true}
+storage = {path = "../storage", extras = ["storage"], develop = true}
+kserve = {path = "../kserve", develop = true}
 paddlepaddle = {version="^2.6.1", markers = "platform_system != 'Windows'"}
 
 [tool.poetry.group.test]
