--- a/python/pmmlserver/pyproject.toml
+++ b/python/pmmlserver/pyproject.toml
@@ -11,7 +11,8 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
-kserve = { path = "../kserve", extras = ["storage"], develop = true }
+storage = { path = "../storage", extras = ["storage"], develop = true }
+kserve = { path = "../kserve", develop = true }
 jpmml-evaluator = "~0.10.2"
 
 [tool.poetry.group.test]
