--- a/python/sklearnserver/pyproject.toml
+++ b/python/sklearnserver/pyproject.toml
@@ -11,7 +11,9 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
-kserve = { path = "../kserve", extras = ["storage"], develop = true }
+kserve = { path = "../kserve", develop = true }
+storage = { path = "../storage", extras = ["storage"], develop = true }
+
 scikit-learn = "~1.3.0"
 joblib = "^1.1.1"
 pandas = "^1.3.5"
