Fix inferenceservice-config conflict
Signed-off-by: Spolti <fspolti@redhat.com>
Signed-off-by: Vedant Mahabaleshwarkar <vmahabal@redhat.com>
Co-authored-by: Filippe Spolti <fspolti@redhat.com>

--- a/config/overlays/odh/inferenceservice-config-patch.yaml
+++ b/config/overlays/odh/inferenceservice-config-patch.yaml
@@ -12,6 +12,10 @@ data:
         "memoryLimit": "1Gi",
         "cpuRequest": "100m",
         "cpuLimit": "1",
+        "caBundleConfigMapName": "",
+        "caBundleVolumeMountPath": "/etc/ssl/custom-certs",
+        "cpuModelcar": "10m",
+        "memoryModelcar": "15Mi"
         "enableDirectPvcVolumeMount": true,
         "enableModelcar": true
     }
