--- a/python/kserve/pyproject.toml
+++ b/python/kserve/pyproject.toml
@@ -30,7 +30,7 @@ classifiers = [
 packages = [
     { include = "kserve" },
 ]
-exclude = ["kserve/storage/test"]
+
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
@@ -56,13 +56,7 @@ pyyaml = "^6.0.0"
 # Storage dependencies. They can be opted into by apps.
 # The storage module will be migrated to its own model and removed from here on new releses,
 # please update it accordingly.
-requests = { version = "^2.20.0", optional = true }
-google-cloud-storage = { version = "^2.3.0", optional = true }
-azure-storage-blob = { version = "^12.10.0", optional = true }
-azure-storage-file-share = { version = "^12.7.0", optional = true }
-azure-identity = { version = "^1.8.0", optional = true }
-boto3 = { version = "^1.21.0", optional = true }
-huggingface-hub = { version = "^0.24.5", optional = true }
+storage = { path = "../storage", optional = true, develop = true }
 
 # Logging dependencies. They can be opted into by apps.
 asgi-logger = { version = "^0.1.0", optional = true, python = ">3.8.0,<3.12" }
@@ -74,18 +68,13 @@ ray = { version = "~2.10.0", extras = ["serve"] }
 # The storage module will be migrated to its own model and removed from here on new releses,
 # please update it accordingly.
 storage = [
-    "requests",
-    "google-cloud-storage",
-    "azure-storage-blob",
-    "azure-storage-file-share",
-    "azure-identity",
-    "boto3",
-    "huggingface-hub"
-
+    "storage"
 ]
+
 logging = [
     "asgi-logger"
 ]
+
 ray = [
     "ray"
 ]
