--- a/python/lgbserver/pyproject.toml
+++ b/python/lgbserver/pyproject.toml
@@ -11,8 +11,8 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
-storage = { path = "../storage", extras = ["storage"], develop = true }
-kserve = { path = "../kserve", develop = true }
+#storage = { path = "../storage", extras = ["storage"], develop = true }
+kserve = { path = "../kserve", extras = ["storage"], develop = true }
 lightgbm = "~3.3.2"
 pandas = "^1.3.5"
 
