--- a/python/storage/pyproject.toml
+++ b/python/storage/pyproject.toml
@@ -24,20 +24,13 @@ azure-storage-blob = { version = "^12.10.0", optional = true }
 azure-storage-file-share = { version = "^12.7.0", optional = true }
 azure-identity = { version = "^1.8.0", optional = true }
 boto3 = { version = "^1.21.0", optional = true }
+huggingface-hub = { version = "^0.24.5", optional = true }
 
 # Logging dependencies. They can be opted into by apps.
 asgi-logger = { version = "^0.1.0", optional = true, python = ">3.8.0,<3.12" }
 pyyaml = { version = "^6.0.0", optional = true, python = ">3.8.0,<3.12" }
 
 [tool.poetry.extras]
-storage = [
-    "requests",
-    "google-cloud-storage",
-    "azure-storage-blob",
-    "azure-storage-file-share",
-    "azure-identity",
-    "boto3",
-]
 logging = [
     "asgi-logger",
     "pyyaml",
