Fix the ODH release workflow for v0.15 branch  (#653)
* Fix the sed text so it looks for the release-latest tag

* Remove extra step that printed the old tag

--- a/.github/workflows/odh-create-release-tag.yml
+++ b/.github/workflows/odh-create-release-tag.yml
@@ -22,8 +22,6 @@ jobs:
           ref: ${{ github.ref }}
           fetch-depth: 0
       
-      - name: Get latest tag
-        id: get_tag
       - name: print tag
         id: print_tag
         run: | 
@@ -61,7 +59,7 @@ jobs:
               
       - name: Update params.env with new release version
         run: |     
-          sed -i 's|:latest|:${{ github.event.inputs.tag_name }}|gm' config/overlays/odh/params.env
+          sed -i 's|:v[0-9.]*\b-latest|:${{ github.event.inputs.tag_name }}|gm' config/overlays/odh/params.env
       - name: Commit changes
         run: |
           git config --global user.email "github-actions@github.com"
