Rename webhook package and add integer validation to LLMInferenceService API (#792)
* Add integer validation rules to the LLMInferenceService types

Signed-off-by: Hannah DeFazio <h2defazio@gmail.com>

* make manifests

Signed-off-by: Hannah DeFazio <h2defazio@gmail.com>

* Add new test file for api validation, add new fixtures needed for tests

Signed-off-by: Hannah DeFazio <h2defazio@gmail.com>

* precommit

Signed-off-by: Hannah DeFazio <h2defazio@gmail.com>

* Fix llmisvc names, cleanup namespace

Signed-off-by: Hannah DeFazio <h2defazio@gmail.com>

* Move integer validation tests to existing validation test file

Signed-off-by: Hannah DeFazio <h2defazio@gmail.com>

* Rename the webhook package to validation

Signed-off-by: Hannah DeFazio <h2defazio@gmail.com>

* Allow zero values for parallelism fields

Signed-off-by: Hannah DeFazio <h2defazio@gmail.com>

---------

Signed-off-by: Hannah DeFazio <h2defazio@gmail.com>

--- a/test/crds/serving.kserve.io_all_crds.yaml
+++ b/test/crds/serving.kserve.io_all_crds.yaml
@@ -23035,20 +23035,26 @@ spec:
                 properties:
                   data:
                     format: int32
+                    minimum: 0
                     type: integer
                   dataLocal:
                     format: int32
+                    minimum: 0
                     type: integer
                   dataRPCPort:
                     format: int32
+                    maximum: 65535
+                    minimum: 1
                     type: integer
                   expert:
                     type: boolean
                   pipeline:
                     format: int32
+                    minimum: 0
                     type: integer
                   tensor:
                     format: int32
+                    minimum: 0
                     type: integer
                 type: object
               prefill:
@@ -23057,24 +23063,31 @@ spec:
                     properties:
                       data:
                         format: int32
+                        minimum: 0
                         type: integer
                       dataLocal:
                         format: int32
+                        minimum: 0
                         type: integer
                       dataRPCPort:
                         format: int32
+                        maximum: 65535
+                        minimum: 1
                         type: integer
                       expert:
                         type: boolean
                       pipeline:
                         format: int32
+                        minimum: 0
                         type: integer
                       tensor:
                         format: int32
+                        minimum: 0
                         type: integer
                     type: object
                   replicas:
                     format: int32
+                    minimum: 0
                     type: integer
                   template:
                     properties:
@@ -30337,6 +30350,7 @@ spec:
                 type: object
               replicas:
                 format: int32
+                minimum: 0
                 type: integer
               router:
                 properties:
@@ -42532,20 +42546,26 @@ spec:
                 properties:
                   data:
                     format: int32
+                    minimum: 0
                     type: integer
                   dataLocal:
                     format: int32
+                    minimum: 0
                     type: integer
                   dataRPCPort:
                     format: int32
+                    maximum: 65535
+                    minimum: 1
                     type: integer
                   expert:
                     type: boolean
                   pipeline:
                     format: int32
+                    minimum: 0
                     type: integer
                   tensor:
                     format: int32
+                    minimum: 0
                     type: integer
                 type: object
               prefill:
@@ -42554,24 +42574,31 @@ spec:
                     properties:
                       data:
                         format: int32
+                        minimum: 0
                         type: integer
                       dataLocal:
                         format: int32
+                        minimum: 0
                         type: integer
                       dataRPCPort:
                         format: int32
+                        maximum: 65535
+                        minimum: 1
                         type: integer
                       expert:
                         type: boolean
                       pipeline:
                         format: int32
+                        minimum: 0
                         type: integer
                       tensor:
                         format: int32
+                        minimum: 0
                         type: integer
                     type: object
                   replicas:
                     format: int32
+                    minimum: 0
                     type: integer
                   template:
                     properties:
@@ -49834,6 +49861,7 @@ spec:
                 type: object
               replicas:
                 format: int32
+                minimum: 0
                 type: integer
               router:
                 properties:
