--- a/config/crd/full/serving.kserve.io_llminferenceserviceconfigs.yaml
+++ b/config/crd/full/serving.kserve.io_llminferenceserviceconfigs.yaml
@@ -76,20 +76,26 @@ spec:
                   properties:
                     data:
                       format: int32
+                      minimum: 0
                       type: integer
                     dataLocal:
                       format: int32
+                      minimum: 0
                       type: integer
                     dataRPCPort:
                       format: int32
+                      maximum: 65535
+                      minimum: 1
                       type: integer
                     expert:
                       type: boolean
                     pipeline:
                       format: int32
+                      minimum: 0
                       type: integer
                     tensor:
                       format: int32
+                      minimum: 0
                       type: integer
                   type: object
                 prefill:
@@ -98,24 +104,31 @@ spec:
                       properties:
                         data:
                           format: int32
+                          minimum: 0
                           type: integer
                         dataLocal:
                           format: int32
+                          minimum: 0
                           type: integer
                         dataRPCPort:
                           format: int32
+                          maximum: 65535
+                          minimum: 1
                           type: integer
                         expert:
                           type: boolean
                         pipeline:
                           format: int32
+                          minimum: 0
                           type: integer
                         tensor:
                           format: int32
+                          minimum: 0
                           type: integer
                       type: object
                     replicas:
                       format: int32
+                      minimum: 0
                       type: integer
                     template:
                       properties:
@@ -7378,6 +7391,7 @@ spec:
                   type: object
                 replicas:
                   format: int32
+                  minimum: 0
                   type: integer
                 router:
                   properties:
