Revert params.env
Signed-off-by: Andres Llausas <allausas@redhat.com>

Update params.env

Signed-off-by: Andres Llausas <allausas@redhat.com>

--- a/config/overlays/odh/params.env
+++ b/config/overlays/odh/params.env
@@ -1,7 +1,7 @@
-kserve-controller=quay.io/rh-ee-marholde/kserve-controller:master
-kserve-agent=quay.io/rh-ee-marholde/kserve-agent:master
-kserve-router=quay.io/rh-ee-marholde/kserve-router:master
-kserve-storage-initializer=quay.io/rh-ee-marholde/kserve-storage-initializer:master
+kserve-controller=quay.io/opendatahub/kserve-controller:v0.15-latest
+kserve-agent=quay.io/opendatahub/kserve-agent:v0.15-latest
+kserve-router=quay.io/opendatahub/kserve-router:v0.15-latest
+kserve-storage-initializer=quay.io/opendatahub/kserve-storage-initializer:v0.15-latest
 kserve-llm-d=ghcr.io/llm-d/llm-d-dev:v0.2.2
 kserve-llm-d-inference-scheduler=quay.io/opendatahub/llm-d-inference-scheduler:odh-v2.33
 kserve-llm-d-routing-sidecar=quay.io/opendatahub/llm-d-routing-sidecar:odh-v2.33
