Promote new KServe Storage module (#4625)
Signed-off-by: Spolti <fspolti@redhat.com>

--- a/python/kserve/pyproject.toml
+++ b/python/kserve/pyproject.toml
@@ -87,6 +87,11 @@ dev = [
     "black[colorama]~=24.3.0",
 ]
 
+[tool.uv]
+# TODO remove later
+index-url = "https://test.pypi.org/simple/"
+extra-index-url = ["https://pypi.org/simple"]
+
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
