Revert "chore: change default deployment mode to RawDeployment"
This reverts commit 63ca5a1ddb3a895f1ba0e343e82d56d9b547a57d.

--- a/config/overlays/odh/patches/patch-inferenceservice-config.yaml
+++ b/config/overlays/odh/patches/patch-inferenceservice-config.yaml
@@ -81,7 +81,7 @@ data:
     }
   deploy: |-
     {
-      "defaultDeploymentMode": "RawDeployment"
+      "defaultDeploymentMode": "Serverless"
     }
   metricsAggregator: |-
     {
