--- a/config/overlays/odh/params.env
+++ b/config/overlays/odh/params.env
@@ -1,4 +1,4 @@
-kserve-controller=quay.io/opendatahub/kserve-controller:stable-2.x
+kserve-controller=quay.io/spolti/kserve-controller:ovms-3
 kserve-agent=quay.io/opendatahub/kserve-agent:stable-2.x
 kserve-router=quay.io/opendatahub/kserve-router:stable-2.x
 kserve-storage-initializer=quay.io/opendatahub/kserve-storage-initializer:stable-2.x
