[RHOAIENG-36673] - Investigate and Refactor KServe E2E Test Suite for RawDeployment mode only
chore:  Fix tests.
        Adapt the setup and run e2e tests to work with Raw Deployment
        Update failing tests to work with Raw Deployment mode

Signed-off-by: Spolti <fspolti@redhat.com>

--- a/config/overlays/odh/inferenceservice-config-patch.yaml
+++ b/config/overlays/odh/inferenceservice-config-patch.yaml
@@ -77,7 +77,7 @@ data:
     }
   deploy: |-
     {
-      "defaultDeploymentMode": "Serverless"
+      "defaultDeploymentMode": "RawDeployment"
     }
   metricsAggregator: |-
     {
