--- a/config/overlays/odh/params.env
+++ b/config/overlays/odh/params.env
@@ -1,4 +1,4 @@
-kserve-controller=quay.io/opendatahub/kserve-controller:latest
+kserve-controller=quay.io/spolti/kserve-controller:multi-node
 kserve-agent=quay.io/opendatahub/kserve-agent:latest
 kserve-router=quay.io/opendatahub/kserve-router:latest
 kserve-storage-initializer=quay.io/opendatahub/kserve-storage-initializer:latest
