--- a/python/kserve/pyproject.toml
+++ b/python/kserve/pyproject.toml
@@ -82,8 +82,8 @@ storage = [
   "azure-identity",
   "boto3",
   "huggingface-hub",
-
 ]
+
 logging = ["asgi-logger"]
 ray = ["ray"]
 llm = ["vllm"]
@@ -103,6 +103,7 @@ avro = "^1.11.0"
 tomlkit = "^0.12.0"
 jinja2 = "^3.1.4"
 grpcio-testing = "^1.60.0"
+timeout-sampler = "<2.0.0,>=1.0.0"
 
 [tool.poetry.group.dev]
 optional = true
