update component names

--- a/.tekton/kserve-controller-push.yaml
+++ b/.tekton/kserve-controller-push.yaml
@@ -12,7 +12,7 @@ metadata:
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: opendatahub-builds
-    appstudio.openshift.io/component: kserve-controller
+    appstudio.openshift.io/component: kserve-controller-ci
     pipelines.appstudio.openshift.io/type: build
   name: kserve-controller-on-push
   namespace: open-data-hub-tenant
