--- a/.tekton/kserve-agent-pull.yaml
+++ b/.tekton/kserve-agent-pull.yaml
@@ -13,7 +13,7 @@ metadata:
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: opendatahub-builds
-    appstudio.openshift.io/component: kserve-agent
+    appstudio.openshift.io/component: kserve-agent-ci
     pipelines.appstudio.openshift.io/type: build
   name: kserve-agent-on-pull-request
   namespace: open-data-hub-tenant
