--- a/.tekton/kserve-controller-pull.yaml
+++ b/.tekton/kserve-controller-pull.yaml
@@ -13,7 +13,7 @@ metadata:
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: opendatahub-builds
-    appstudio.openshift.io/component: kserve-controller
+    appstudio.openshift.io/component: kserve-controller-ci
     pipelines.appstudio.openshift.io/type: build
   name: kserve-controller-on-pull-request
   namespace: open-data-hub-tenant
