--- a/.tekton/kserve-router-pull.yaml
+++ b/.tekton/kserve-router-pull.yaml
@@ -13,7 +13,7 @@ metadata:
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: opendatahub-release
-    appstudio.openshift.io/component: kserve-router
+    appstudio.openshift.io/component: kserve-router-ci
     pipelines.appstudio.openshift.io/type: build
   name: kserve-router-on-pull-request
   namespace: open-data-hub-tenant
